--- a/templates/Common/footer.html.twig
+++ b/templates/Common/footer.html.twig
@@ -22,7 +22,7 @@
                 <p>
                     東京都新宿区市谷左内町21-13<br/>
                 </p>
-                <a href="{{ path("app_toppage_index") }}">お問い合わせ</a>
+                <a href="{{ path("app_inquiry_index") }}">お問い合わせ</a>
             </div>
         </div>
     </div>
