--- a/templates/inquiry/index.html.twig
+++ b/templates/inquiry/index.html.twig
@@ -1,5 +1,3 @@
-
-
 {% extends "layout.html.twig" %}
 
 {% block tilte %}お問い合わせ{{ parent() }}{% endblock %}
@@ -18,7 +16,7 @@
     <section id="inquiry-sec">
         <div class="container">
             <div class="row pad-row">
-                {{ form_start(form) }}
+                {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
                 <table class="table">
                     <tr>
                         <th><i class="fa fa-circle"></i>お名前</th>
