--- a/templates/Admin/Inquiry/index.html.twig
+++ b/templates/Admin/Inquiry/index.html.twig
@@ -6,10 +6,12 @@
     <h2 class="table table-striped">お問い合わせ管理</h2>
 
     <div>
-        {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+        {{ form_start(form, {'attr': {'id': 'searchForm', 'novalidate': 'novalidate'}}) }}
         検索： {{ form_widget(form.search) }}
-        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-default'}}) }}
+        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-default searchButton'}}) }}
         {{ form_end(form) }}
+
+        <a href="" class="btn btn-default downloadButton">CSVダウンロード</a>
     </div>
 
     <table class="table table-striped">
@@ -25,13 +27,29 @@
         <tbody>
         {% for inquiry in inquiryList %}
             <tr>
-            <td>{{ inquiry.id }}</td>
-            <td></td>
-            <td>{{ inquiry.name }}</td>
-            <td>{% if inquiry.type == 0 %}公演について{% else %}その他{% endif %}</td>
-            <td><a href="{{ path("app_admininquiryedit_input", {"id": inquiry.id}) }}" class="btn btn-default">詳細</a></td>
+                <td>{{ inquiry.id }}</td>
+                <td></td>
+                <td>{{ inquiry.name }}</td>
+                <td>{% if inquiry.type == 0 %}公演について{% else %}その他{% endif %}</td>
+                <td><a href="{{ path("app_admininquiryedit_input", {"id": inquiry.id}) }}"
+                       class="btn btn-default">詳細</a></td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript">
+        $('.downloadButton').click(function (e) {
+            $('#searchForm').attr('action', '{{ path("app_admininquirylist_index", {"_format":"csv"}) }}');
+            $('#searchForm').submit();
+            e.preventDefault();
+        });
+        $('.searchButton').click(function () {
+            $('#searchForm').attr('action', '{{ path("app_admininquirylist_index", {"_format":"html"}) }}');
+            $('#searchForm').submit();
+        });
+    </script>
 {% endblock %}
